2009-06-15  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: added mean projection to possibilities in parameter list.
	* raw_mean_subtract.m: fixed transpose bug for subtraction.

2008-11-14  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added.
	* balance_pulnix_gains: modified documentation to better match Mathworks convention.
	* clipraw.m: same.
	* enhance_contrast.m: same.
	* get_mips.m: same.
	* imscalebar.m: same.
	* make_pulnix_avi.m: same.
	* mip.m: same.
	* playback_data.m: same.
	* raw2avi.m: same.
	* raw2img.m: same.
	* raw_balance_gain.m: same.
	* raw_flipud.m: same.
	* raw_mean_subtract.m: same.
	* raw_swaplines.m: same.
	* swaplines.m: same.
	* video_psd.m: same.
	
2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: added x and y offsets to crop (frame_size) vector.

2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
	* raw_flipud.m: added.  vertically flips rawfile.

2007-01-26  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: fixed typo.
	* raw2img.m: outputted scaled image now defaults to unscaled image.

2006-07-20  Jeremy Cribb <jcribb@email.unc.edu>
	* clipraw.m:  added cropping functionality.  added variable output to available memory or to a file.  There is no way to put the new position info into the rawfile format so crop at your own risk.

2006-06-19  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: now you can choose 'min'imum or 'max'imum intensity projection directly in get_mips.

2006-05-22  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: removed an experimental change to the code (committed by mistake).

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: fixed error when end_frame wasn't defined.  Now it sets end_frame to the number of frames in the raw file.

2006-04-03  Jeremy Cribb <jcribb@email.unc.edu>
	* video_psd.m: added.  inputs video tracking data and attaches psd info to structure.
	* raw2avi.m: updated some documentation.  mainly playing around with video codecs for video compression.
	